infra/ingress/argo-cd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: argo-cd.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-server
            port:
              number: 80
